# ELI-NP-software-for-barcode-reading

./: CMakeLists.txt  Description_ELI-NP_Barcode.docx  Linux Setup.docx  LinuxSourceCode.cpp  WinSourceCode.cpp  Windows Setup.docx
